# FileSorterProject

./: CMakeLists.txt  CMakePresets.json  README.md
FileSorterProject/: CMakeLists.txt  FileSorterProject.cpp  FileSorterProject.h
build_release/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  FileSorterProject.sln  FileSorterProject.vcxproj  FileSorterProject.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
build_release/.qt/: QtDeploySupport-Debug.cmake  QtDeploySupport-MinSizeRel.cmake  QtDeploySupport-RelWithDebInfo.cmake  QtDeploySupport-Release.cmake  QtDeployTargets-Debug.cmake  QtDeployTargets-MinSizeRel.cmake  QtDeployTargets-RelWithDebInfo.cmake  QtDeployTargets-Release.cmake
build_release/FileSorterProject_autogen/include_Release/VZKHXQLDTQ/: moc_BlockWidget.cpp.d  moc_CanvasWidget.cpp  moc_CanvasWidget.cpp.d  moc_HelpPage.cpp.d  moc_LogPage.cpp.d  moc_RootBlockArea.cpp  moc_RootBlockArea.cpp.d  moc_TestBlockPage.cpp  moc_TestBlockPage.cpp.d  moc_filedropwidget.cpp  moc_filedropwidget.cpp.d  moc_mainwindow.cpp  moc_mainwindow.cpp.d
include/: Block.h  BlockErrorDetector.h  BlockUtils.h  Classifier.h  ExceptionBlock.h  FileInfo.h  FileManager.h  JsonManager.h  LogPage.h  MainWindow.h  UIConstants.h  filedropwidget.h  fileviewwidget.h  mainwindow.h  settingswidget.h
include/Ui/: BlockWidget.h  CanvasWidget.h  HelpPage.h  RootBlockArea.h  TestBlockPage.h  UIConstants.h  filedropwidget.h  mainwindow.h
include/styles/: StyleSheet.h
src/: Block.cpp  BlockErrorDetector.cpp  BlockWidget.cpp  CanvasWidget.cpp  Classifier.cpp  FileManager.cpp  JsonManager.cpp  LogPage.cpp  MainWindow.cpp  RootBlockArea.cpp  TestBlockPage.cpp  filedropwidget.cpp  fileviewwidget.cpp  main.cpp  mainwindow.cpp  settingswidget.cpp
src/Ui/: BlockWidget.cpp  HelpPage.cpp  LogPage.cpp  RootBlockArea.cpp  TestBlockPage.cpp  filedropwidget.cpp  mainwindow.cpp
